# procyon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  procyon.focus-config
.focus/: generate_project_config.ps1
blender/: mysteriousj_blender_export_script_guide.py  p3d_export.py
cmake/: DevkitArm3DS.cmake  FindCITRO3DLIB.cmake  FindCTRULIB.cmake  Tools3DS.cmake
ext/: CMakeLists.txt
res/: cp437.pbm  model.fbx  model.m3d  shader.glsl  shader.hlsl  ybot.fbx  ybot.m3d
res/amy/: amy.m3d
scripts/: build_3ds.sh  build_psp.ps1  build_psp.sh  build_res.ps1
src/: core.c  core.h  main.c  old_main.c  p_config.h  pe_bit_stream.c  pe_bit_stream.h  pe_bit_stream.i  pe_config.h  pe_core.c  pe_core.h  pe_core.i  pe_file_io.c  pe_file_io.h  pe_input.c  pe_input.h  pe_net.c  pe_net.h  pe_profile.c  pe_profile.h  pe_protocol.c  pe_protocol.h  pe_random.c  pe_random.h  pe_string.c  pe_string.h  pe_temp_allocator.c  pe_temp_allocator.h  pe_temp_allocator.i  pe_temp_arena.c  pe_temp_arena.h  pe_temp_arena.i  pe_tests.c  pe_time.c  pe_time.h  pe_trace.c  pe_trace.h  skinning.c  win32_main.c
src/archive/: old_main.c  skinning.c
src/blender/: p3d_export.py
src/client/: linux_main.c  main.c  old_win32_main.c  p3d.h  pe_client.c  pe_client.h  pe_graphics.c  pe_graphics.h  pe_graphics_linux.c  pe_graphics_linux.h  pe_graphics_psp.c  pe_graphics_psp.h  pe_graphics_win32.c  pe_graphics_win32.h  pe_input.c  pe_input.h  pe_input_glfw.c  pe_input_glfw.h  pe_input_psp.c  pe_math.c  pe_model.c  pe_model.h  pe_platform.c  pe_platform.h  pe_platform_psp.c  pe_platform_psp.h  pe_window_glfw.c  pe_window_glfw.h  pp3d.h  psp_main.c  psp_net_sample.c  win32_bit_stream_sample.c  win32_main.c  win32_net_sample.c
src/client/psp/: psp_gu.c  psp_gu.h
src/client/win32/: win32_d3d.c  win32_d3d.h  win32_glfw.c  win32_glfw.h  win32_shader.c  win32_shader.h
src/core/: p_arena.h  p_assert.h  p_core.c  p_data_structure_utility.h  p_defines.h  p_file.h  p_free_list.h  p_heap.h  p_random.h  p_scratch.h  p_string.h  p_string_set.h  p_time.h  pe_core.c  pe_core.h  pe_file_io.c  pe_file_io.h  pe_random.c
src/game/: p_bit_stream.c  p_entity.c  p_entity.h  p_protocol.c  p_protocol.h  pe_bit_stream.c  pe_bit_stream.h  pe_bit_stream.i  pe_entity.c  pe_entity.h  pe_protocol.c  pe_protocol.h
src/graphics/: p3d.h  p_asset_loader.c  p_asset_loader.h  p_graphics.c  p_graphics.h  p_graphics_3ds.c  p_graphics_linux.c  p_graphics_linux.h  p_graphics_math.c  p_graphics_math.h  p_graphics_psp.c  p_graphics_psp.h  p_graphics_win32.c  p_graphics_win32.h  p_model.c  p_model.h  p_model_3ds.c  p_model_linux.c  p_model_old.h  p_model_psp.c  p_model_win32.c  p_pbm.c  p_pbm.h  pe_graphics.c  pe_graphics.h  pe_graphics_linux.c  pe_graphics_linux.h  pe_graphics_psp.c  pe_graphics_psp.h  pe_graphics_win32.c  pe_graphics_win32.h  pe_math.c  pe_math.h  pe_model.c  pe_model.h  pe_model_linux.c  pe_model_old.h  pe_model_psp.c  pe_model_win32.c  pp3d.h
src/math/: p_math.h
src/p3dconv/: p3d.h  p3d_format.md  win32_main.c
src/platform/: p_file.h  p_file_3ds.c  p_file_linux.c  p_file_psp.c  p_file_win32.c  p_input.c  p_input.h  p_input_3ds.c  p_input_glfw.c  p_input_psp.c  p_net.c  p_time.c  p_time.h  p_window.c  p_window.h  p_window_3ds.c  p_window_glfw.c  p_window_psp.c  pe_input.c  pe_input.h  pe_input_glfw.c  pe_input_glfw.h  pe_input_psp.c  pe_input_psp.h  pe_net.c  pe_net.h  pe_platform.c  pe_platform.h  pe_platform_psp.c  pe_platform_psp.h  pe_time.c  pe_time.h  pe_window.c  pe_window.h  pe_window_glfw.c  pe_window_glfw.h  pe_window_psp.c
src/samples/: p_tests.c  pe_tests.c
src/samples/3ds/: main.c  vshader.v.pica
src/server/: main.c  server_main.c  win32_main.c
src/tools/: compile_resources.c  export_google_trace.c
src/utility/: p_test.h  p_trace.c  p_trace.h  pe_trace.c  pe_trace.h
tests/: test_free_list.c  test_main.c  test_string_set.c
